third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/key/without-value-2.stderr
TOML parse error at line 1, column 7
  |
1 | key = 
  |       ^
invalid string
expected `"`, `'`
